<resources>
    <string name="language_follow_system">Default to System Settings</string>
    <string name="language_follow_system_more">Default to System Settings</string>
    <string name="language_en">English</string>
    <string name="language_en_more">English</string>
    <string name="language_chinese_simplified">简体中文</string>
    <string name="language_chinese_simplified_more">Simplified Chinese</string>
    <string name="language_chinese_traditional">繁體中文</string>
    <string name="language_chinese_traditional_more">Traditional Chinese</string>
    <string name="backup_mnemonic_prompt_title">Backup Mnemonic Words Hint</string>
    <string name="backup_mnemonic_prompt_btn_later">Backup Mnemonic Words Later</string>
    <string name="backup_mnemonic_prompt_btn_start">Start Backup Mnemonic Words</string>
    <string name="backup_mnemonic_prompt_content_01">Get Mnemonic Words</string>
    <string name="backup_mnemonic_prompt_content_02">Backup Mnemonic Words</string>
    <string name="backup_mnemonic_prompt_content_03">Write down mnemonic words on paper\nIf you have lost or damaged your phone，mnemonic words will be used to recover your funds in the wallet</string>
    <string name="backup_mnemonic_prompt_content_04">Keep Offline</string>
    <string name="backup_mnemonic_prompt_content_05">Please keep mnemonic words offline and in a safe place\nNever share, store mnemonic words on internet such as email, texting, social network, etc.</string>
    <string name="backup_mnemonic_prompt_content_06">Equal to own all funds in the wallet</string>
    <string name="backup_mnemonic_warn_title">Safety Warning</string>
    <string name="backup_mnemonic_warn_btn">Backup Mnemonic Words Now</string>
    <string name="backup_mnemonic_warn_content_01">Your identity mnemonic words are not yet backed up，Please backup the mnemonic words</string>
    <string name="backup_mnemonic_warn_content_02">Mnemonic words may be used to recover funds in the identity wallet in case you forgot the wallet access code, removed the App or lost your phone</string>
    <string name="show_mnemonic_title">Backup mnemonic words</string>
    <string name="show_mnemonic_content_01">Please write down the mnemonic words in order</string>
    <string name="show_mnemonic_content_02">Do not copy or make screenshot\nIt might be collected by a third party software\nto cause loss of funds</string>
    <string name="backup_mnemonic_show_title">Backup mnemonic words showing</string>
    <string name="confirm_mnemonic_title">Confirm Mnemonic words</string>
    <string name="confirm_mnemonic_content_01">Please click on the order of mnemonic words to confirm your backup</string>
    <string name="confirm_mnemonic_tips_01">Invalid order of the mnemonic words. Please correct it</string>
    <string name="confirm_mnemonic_tips_02">Please click in the order of the mnemonic words</string>
    <string name="btn_next_step">Next</string>
    <string name="btn_complete">Complete</string>
    <string name="action_back">Back</string>
    <string name="quit_confirmation">Click again to exit</string>
    <string name="action_confirm">Confirm</string>
    <string name="transfer">Transfer</string>
    <string name="collection">Receive</string>
    <string name="copy_success">Copy Success</string>
    <string name="hint_insufficient_or_trading_fees_are_confirmed">Insufficient balance or transactions not confirmed</string>
    <string name="account_operation_identity_wallet">Identity Wallet</string>
    <string name="account_operation_other_wallet">Create/Import</string>
    <string name="title_colletction">Receive</string>
    <string name="title_import_the_wallet">Import Identity</string>
    <string name="title_create_the_wallet">Create Identity</string>
    <string name="create_identity">Create Identity</string>
    <string name="import_identity">Import Identity</string>
    <string name="account_label_identity_wallet">Identity Wallet</string>
    <string name="account_label_other_wallet">Create/Import</string>
    <string name="action_create">Create</string>
    <string name="action_import">Import</string>
    <string name="hint_input_nickname">Input Nickname</string>
    <string name="hint_wallet_password">Input Wallet Access Code</string>
    <string name="hint_input_confirm_password">Confirm Wallet Access Code</string>
    <string name="hint_confirm_password_fault">Password input is inconsistent</string>
    <string name="hint_nickname_empty">Wallet nickname cannot be empty</string>
    <string name="hint_input_password_short">Wallet Access Code too short</string>
    <string name="hint_input_mnemonic_word">Input mnemonic words with space</string>
    <string name="hint_mnemonic_error">Mnemonic Words Error</string>
    <string name="action_start_import">Start Import</string>
    <string name="action_immediately_into">Enter Now</string>
    <string name="title_welcome_1">Welcome To</string>
    <string name="hint_security_setting">Security Settings</string>
    <string name="hint_backup_now">Backup Now</string>
    <string name="label_current_assets">Current Funds</string>
    <string name="label_transaction_records">Transaction History</string>
    <string name="label_assets">Funds</string>
    <string name="title_address_book">Address Book</string>
    <string name="hint_address_book">Address Book</string>
    <string name="title_add_address_book">Add Address</string>
    <string name="label_address_book_note">Note cannot be less than 20 characters</string>
    <string name="hint_note">Note</string>
    <string name="label_address">Address</string>
    <string name="hint_input_address">InputAddress</string>
    <string name="action_add">Add</string>
    <string name="hint_select">Select</string>
    <string name="hint_input_note">Please Write Note</string>
    <string name="hint_input_address_error">Input Invalid Address</string>
    <string name="hint_address_success">Add Success</string>
    <string name="hint_create_any_wallet">Create%1$s Wallet</string>
    <string name="hint_import_any_wallet">Import%1$s Wallet</string>
    <string name="hint_collection_address">Receive Address</string>
    <string name="hint_input_collection_address">Input Receiving Address</string>
    <string name="action_copy">Copy</string>
    <string name="hint_transfer_amount">Amount：%1$s %2$s</string>
    <string name="hint_input_amount">Input Amount</string>
    <string name="hint_slow">Slow</string>
    <string name="hint_fast">Fast</string>
    <string name="hint_fee">Transaction Fee</string>
    <string name="action_tvHintFee">Transfer</string>
    <string name="title_transfer">Transfer</string>
    <string name="hint_please_input_amount">Input Transfer Amount</string>
    <string name="hint_please_input_address">Input Transfer Address</string>
    <string name="title_address_assert">Add Fiat Currency</string>
    <string name="title_manager">Manage</string>
    <string name="hint_output_back">Export mnemonic words</string>
    <string name="action_delete_wallet">Remove Wallet</string>
    <string name="hint_change_wallet_name">Change Wallet Name</string>
    <string name="hint_input_password">Input Access Code</string>
    <string name="action_cancel">Cancel</string>
    <string name="hint_password">Access Code</string>
    <string name="hint_please_input_password">Input Access Code</string>
    <string name="hint_password_error">Access Code Error</string>
    <string name="hint_wallet_info">Wallet Detail</string>
    <string name="hint_input_new_wallet_name">Input New Wallet Name</string>
    <string name="hint_modify_success">Update Success</string>
    <string name="me_wallet_management">Manage Wallet</string>
    <string name="me_transfer_record">Transfer History</string>
    <string name="me_authentication">Identity Authentication</string>
    <string name="me_phone_verification">Phone Verification</string>
    <string name="me_email_verification">Email Verification</string>
    <string name="me_address_book">Address Book</string>
    <string name="me_settings">Settings</string>
    <string name="desc_bound">Verify</string>
    <string name="desc_unbound">Not yet verified</string>
    <string name="desc_authenticated">Authenticated</string>
    <string name="desc_unauthorized">Unauthorized</string>
    <string name="hint_get_the_camera_permissions">Permission to access camera</string>
    <string name="hint_set_permissions_to_open">Need access camera to scan QR. Grant access to camera</string>
    <string name="hint_scan_need_camera_permissions">Need grant access to camera to scan</string>
    <string name="action_scan_address">Scan Wallet Address</string>
    <string name="title_scan">Scan</string>
    <string name="add_wallet_title">Add Wallet</string>
    <string name="setting_title">Settings</string>
    <string name="setting_multi_language">Languages</string>
    <string name="setting_service_agreement">Service Agreement</string>
    <string name="setting_about_us">About Us</string>
    <string name="setting_help_feedback">Help &amp; Feedback</string>
    <string name="about_us_title">About Us</string>
    <string name="about_us_website_key">Official Website</string>
    <string name="about_us_website_value">https://violas.io</string>
    <string name="about_us_email_key">Email</string>
    <string name="about_us_email_value">violas_blockchain@violas.io</string>
    <string name="about_us_wechat_key">Wechat</string>
    <string name="about_us_wechat_value">xxxxx</string>
    <string name="about_us_telegram_key">Telegram</string>
    <string name="about_us_telegram_value">xxxxx</string>
    <string name="label_types_issuing">Type of Fiat Currency</string>
    <string name="hint_select_types_issuing">Select Type of Fiat Currency</string>
    <string name="hint_fill_number_types_issuing">Issuing Amount of Digital Currency</string>
    <string name="label_number_types_issuing">Issuing Amount</string>
    <string name="hint_fill_stable_currency_value">Value of Digital Currency</string>
    <string name="label_stable_currency_value">Value of Digital Currency</string>
    <string name="hint_three_capital_letters">Three Uppercase Characters</string>
    <string name="label_stable_currency_name">Name of Digital Currency</string>
    <string name="label_wallet_address">SSO Wallet Address</string>
    <string name="label_wallet_public_key">SSO Wallet Public Key</string>
    <string name="label_application_date">Application Date</string>
    <string name="label_request_deadline">Application Valid Period</string>
    <string name="label_request_expiration_time">Application Expiration Date</string>
    <string name="label_name">Name</string>
    <string name="label_birthday">Birth Date</string>
    <string name="label_nationality">Nationality</string>
    <string name="label_certificate_type">ID Card Type</string>
    <string name="label_id_card">ID Card Number</string>
    <string name="label_phone">Phone Number</string>
    <string name="label_email">Email</string>
    <string name="hine_upload_file1">Upload picture that holds the Reserve Certification with your whole face</string>
    <string name="hint_upload_file2">Upload Bank Account Info (including the front and back of payment check)</string>
    <string name="hint_upload_file_hint">*Write SSO issuing note on the front of payment check：SSO Wallet Address, Name of Digital Currency, Type of Fiat Currency, Issuing Amount, ID Number, Phone Number, Email Address, Application Date. Signature on the back of payment check</string>
    <string name="action_upload">Upload Document</string>
    <string name="action_confirm_submit">Confirm Submit</string>
    <string name="action_mint">Issuing</string>
    <string name="format_days">%1$d day</string>
    <string name="id_card">ID card</string>
    <string name="label_reserve_photo">Hand holding reserve document photo</string>
    <string name="label_bank_cheque_photo">Bank account information</string>
</resources>