<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dp_20">

    <com.violas.wallet.widget.ApplySubmitItemView
        android:id="@+id/asivFiatCurrencyType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_title="@string/label_types_issuing"
        tools:item_content="USD" />

    <com.violas.wallet.widget.ApplySubmitItemView
        android:id="@+id/asivTokenAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_title="@string/label_number_types_issuing"
        tools:item_content="100000" />

    <com.violas.wallet.widget.ApplySubmitItemView
        android:id="@+id/asivTokenValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_title="@string/label_stable_currency_value"
        tools:item_content="1USD" />

    <com.violas.wallet.widget.ApplySubmitItemView
        android:id="@+id/asivTokenName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_title="@string/label_stable_currency_name"
        tools:item_content="VXX" />

    <com.violas.wallet.widget.ApplySubmitItemView
        android:id="@+id/asivSSOWalletAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_title="@string/label_wallet_address"
        tools:item_content="dfjajkdjkfjklajfuwhidoefjc" />

    <com.violas.wallet.widget.ApplySubmitItemView
        android:id="@+id/asivApplicationDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_title="@string/label_application_date"
        tools:item_content="2019/11/12 15:00" />

    <com.violas.wallet.widget.ApplySubmitItemView
        android:id="@+id/asivApplicationPeriod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_title="@string/label_request_deadline"
        tools:item_content="@string/format_days">

        <com.violas.wallet.widget.ApplySubmitItemView
            android:id="@+id/asivIDName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:item_title="@string/label_name"
            tools:item_content="Lucy" />
    </com.violas.wallet.widget.ApplySubmitItemView>

    <com.violas.wallet.widget.ApplySubmitItemView
        android:id="@+id/asivExpirationDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_title="@string/label_request_expiration_time"
        tools:item_content="2019/11/17 15:00" />

    <com.violas.wallet.widget.ApplySubmitItemView
        android:id="@+id/asivNationality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_title="@string/label_nationality"
        tools:item_content="France" />

    <com.violas.wallet.widget.ApplySubmitItemView
        android:id="@+id/asivIDType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_title="@string/label_certificate_type"
        tools:item_content="@string/id_card" />

    <com.violas.wallet.widget.ApplySubmitItemView
        android:id="@+id/asivIDNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_title="@string/label_id_card"
        tools:item_content="110832828839932" />

    <com.violas.wallet.widget.ApplySubmitItemView
        android:id="@+id/asivPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_title="@string/label_phone"
        tools:item_content="182***7263" />

    <com.violas.wallet.widget.ApplySubmitItemView
        android:id="@+id/asivEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_title="@string/label_email"
        tools:item_content="112****@qq.com" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_21"
        android:text="@string/label_reserve_photo"
        android:textColor="@color/def_text_label"
        android:textSize="@dimen/sp_12" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_170"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@color/color_F8F9FA"
        android:paddingStart="@dimen/dp_15"
        android:paddingTop="@dimen/dp_11"
        android:paddingEnd="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_11">

        <ImageView
            android:id="@+id/ivReservePhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_bg_photo" />

    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_25"
        android:text="@string/label_bank_cheque_photo"
        android:textColor="@color/def_text_label"
        android:textSize="@dimen/sp_12" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_88"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/color_F8F9FA"
        android:paddingStart="@dimen/dp_15"
        android:paddingTop="@dimen/dp_11"
        android:paddingEnd="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_11">

        <ImageView
            android:id="@+id/ivBankChequePhotoPositive"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_bg_photo" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_88"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@color/color_F8F9FA"
        android:paddingStart="@dimen/dp_15"
        android:paddingTop="@dimen/dp_11"
        android:paddingEnd="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_11">

        <ImageView
            android:id="@+id/ivBankChequePhotoBack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_bg_photo" />

    </FrameLayout>

</LinearLayout>