<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff7f7f9"
    android:orientation="vertical"
    tools:context="com.violas.wallet.ui.applyForMint.ApplyForMintActivity">

    <com.violas.wallet.widget.ApplySubmitItemView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:item_title="@string/label_wallet_address"
        tools:item_content="dfjajkdjkfjklajfuwhidoefjc" />

    <com.violas.wallet.widget.ApplySubmitItemView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:item_title="@string/label_stable_currency_name"
        tools:item_content="dfjajkdjkfjklajfuwhidoefjc" />

    <com.violas.wallet.widget.ApplySubmitItemView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:item_title="@string/label_number_types_issuing"
        tools:item_content="dfjajkdjkfjklajfuwhidoefjc" />

    <Button
        style="@style/BaseButtonPrimary"
        android:layout_width="238dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/action_mint" />
</LinearLayout>
